# gmp-ecm-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
gmp-ecm/: Cargo.toml  LICENSE-GPL.md  LICENSE-LGPL.md  README.md
gmp-ecm-sys/: Cargo.toml  README.md  build.rs
gmp-ecm-sys/ecm-7.0.6-c/: .gitignore  Makefile.in  aclocal.m4  config.h.in  configure  mpmod.c
gmp-ecm-sys/ecm-7.0.6-c/aprtcle/: Makefile.in
gmp-ecm-sys/ecm-7.0.6-c/autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2
gmp-ecm-sys/ecm-7.0.6-c/powerpc64/: Makefile.in
gmp-ecm-sys/ecm-7.0.6-c/x86_64/: Makefile.in
gmp-ecm-sys/src/: bindings.rs  lib.rs
gmp-ecm/src/: lib.rs  main.rs  params.rs
