[package]
name = "gmp-ecm-sys"
version = "0.1.0"
build = "build.rs"
edition = "2021"
authors = ["skyf0l"]
description = "Rust low-level bindings for GMP-ECM."
repository = "https://github.com/skyf0l/gmp-ecm-rs"
license = "LGPL-3.0+"
categories = ["external-ffi-bindings", "mathematics"]
keywords = ["primes", "ffi", "gmp", "bignum", "math"]
readme = "README.md"
